# teapy

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.requirements.txt  build.rs  build_requirements.txt  pyproject.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build-test.yaml  build.yaml  coverage.yaml  release_python.yaml  test_python.yaml
include/: ts_func.h
py_teapy/: Cargo.toml
py_teapy/src/: equity.rs  from_py.rs  lib.rs
py_teapy/src/pylazy/: datadict.rs  export.rs  groupby.rs  impl_pyexpr.rs  mod.rs  pyexpr.rs  pyfunc.rs  time.rs
src/: array.rs  array_func.rs  datatype.rs  eager_api.rs  eager_macros.rs  equity.rs  from_py.rs  lib.rs  macros.rs  pyarray.rs  test.rs  ts_func.cpp  window_func.rs
src/arr/: agg.rs  algos.rs  arr_func.rs  corr.rs  datatype.rs  export.rs  groupby.rs  iterators.rs  join.rs  macros.rs  mod.rs  prelude.rs  time.rs  util_trait.rs  utils.rs
src/arrview/: agg.rs  compare.rs  corr.rs  macros.rs  mod.rs  prelude.rs
src/ffi/: mod.rs
src/func_type/: macros.rs  mod.rs
src/pylazy/: datadict.rs  export.rs  groupby.rs  impl_pyexpr.rs  mod.rs  pyexpr.rs  pyfunc.rs  time.rs
src/window_func/: _window.rs  compare.rs  corr.rs  feature.rs  macros.rs  mod.rs  norm.rs  prelude.rs  reg.rs
tea-core/: Cargo.toml
tea-core/benches/: agg.rs
tea-core/src/: arbarray.rs  arrok.rs  iterators.rs  lib.rs  macros.rs  own.rs  prelude.rs  traits.rs  view.rs  viewmut.rs
tea-core/src/impls/: impl_1d_method.rs  impl_basic.rs  impl_basic_agg.rs  impl_method.rs  impl_numeric.rs  impl_time.rs  impl_traits.rs  mod.rs
tea-core/src/impls/linalg/: layout.rs  least_squares.rs  mod.rs  svd.rs  utils.rs
tea-core/src/py_dtype/: object.rs  time.rs
tea-dtype/: Cargo.toml
tea-dtype/src/: cast.rs  lib.rs  object.rs  option_datatype.rs  pyvalue.rs  time.rs
tea-error/: Cargo.toml
tea-ext/: Cargo.toml
tea-ext/benches/: inplace.rs  rolling.rs
tea-ext/src/: create.rs  from_py.rs  lib.rs  linalg.rs  macros.rs
tea-ext/src/agg/: corr.rs  impl_lazy.rs  mod.rs
tea-ext/src/map/: impl_1d.rs  impl_arrok.rs  impl_inplace.rs  impl_string.rs  impl_time.rs  mod.rs
tea-ext/src/map/impl_lazy/: auto_impl.rs  impl_view.rs  mod.rs  stat.rs  time.rs
tea-ext/src/rolling/: cmp.rs  corr.rs  feature.rs  impl_lazy.rs  mod.rs  norm.rs  reg.rs
tea-ext/src/rolling/impl_lazy/: auto_impl.rs  common.rs  mod.rs
tea-groupby/: Cargo.toml
tea-groupby/benches/: groupby.rs
tea-groupby/src/: from_py.rs  groupby_agg.rs  impl_lazy.rs  join.rs  lib.rs  unique.rs
tea-hash/: Cargo.toml
tea-hash/src/: lib.rs
tea-io/: Cargo.toml
tea-io/src/: colselect.rs  lib.rs
tea-io/src/arrow/: ipc.rs  utils.rs
tea-io/src/arrow_io/: impl_lazy.rs  ipc.rs  mod.rs  utils.rs
tea-lazy/: Cargo.toml
tea-lazy/src/: groupby.rs  hash.rs  lib.rs  linalg.rs  unique.rs
tea-lazy/src/datadict/: context.rs  dict.rs  get_set.rs  mod.rs  selector.rs
tea-lazy/src/expr_core/: data.rs  expr.rs  expr_element.rs  expr_inner.rs  mod.rs
tea-lazy/src/expr_core/impls/: auto_impl.rs  export.rs  impl_cast.rs  impl_dtype_judge.rs  impl_groupby_time.rs  impl_io.rs  impl_mut.rs  impl_ops.rs  impl_own.rs  impl_view.rs  impl_window.rs  mod.rs
tea-macros/: Cargo.toml
tea-macros/src/: lazy_impls.rs  lib.rs  methods_impl.rs  methods_impls.rs  tools.rs
tea-py/: Cargo.toml  build.requirements.txt  pyproject.toml
tea-py/python/teapy/: __init__.py  array_func.py  datadict.py  expr.py  mod_func.py  py_datadict.py  regression.py  selector.py  testing.py  window_func.py  wrapper.py
tea-py/python/teapy/tests/: test_array_func.py  test_common.py  test_context.py  test_datadict.py  test_equity.py  test_expr.py  test_memory.py  test_time.py
tea-py/python/teapy/tests/window/: test_compare.py  test_corr.py  test_feature.py  test_norm.py  test_reg.py
tea-py/src/: equity.rs  from_py.rs  lib.rs
tea-py/src/pylazy/: datadict.rs  export.rs  groupby.rs  impl_pyexpr.rs  mod.rs  pyexpr.rs  pyfunc.rs  wrap.rs
tea-time/: Cargo.toml
tea-time/src/: convert.rs  datetime.rs  lib.rs  timedelta.rs  timeunit.rs
tea-utils/: Cargo.toml
tea-utils/src/: algos.rs  alloc.rs  lib.rs  macros.rs  traits.rs
teapy/: __init__.py  array.py  array_func.py  converter.py  datadict.py  expr.py  mod_func.py  regression.py  test.py  testing.py  window.py  window_func.py  wrapper.py
teapy-core/: Cargo.toml
tears/: Cargo.toml
tears/src/: agg.rs  arropt.rs  datatype.rs  error.rs  export.rs  from_py.rs  groupby.rs  iterators.rs  join.rs  lib.rs  macros.rs  option_datetype.rs  pyvalue.rs  time.rs  util_trait.rs
tears/src/arrow_io/: ipc.rs  mod.rs
tears/src/core/: arbarray.rs  arrok.rs  mod.rs  own.rs  view.rs  viewmut.rs
tears/src/core/impls/: impl_1d_method.rs  impl_method.rs  impl_numeric.rs  impl_traits.rs  mod.rs
tears/src/core/impls/linalg/: layout.rs  least_squares.rs  svd.rs
tears/src/datatype/: cast.rs  mod.rs  option_datatype.rs  pyvalue.rs  time.rs
tears/src/eager/: agg.rs  arr_func.rs  corr.rs  impl_arrok.rs  mod.rs
tears/src/eager/window/: compare.rs  corr.rs  feature.rs  mod.rs  norm.rs  reg.rs
tears/src/hash/: mod.rs
tears/src/impls/: impl_1d_method.rs  impl_method.rs  impl_numeric.rs  impl_traits.rs
tears/src/impls/linalg/: generate.rs  layout.rs  least_squares.rs  svd.rs
tears/src/lazy/: auto_impl_own.rs  context.rs  expr.rs  expr_view.rs  exprs.rs  groupby.rs  impl_cmp.rs  impl_mut.rs  impl_ops.rs  impl_own.rs  impl_view.rs  join.rs  linalg.rs  mod.rs  unique.rs
tears/src/lazy/datadict/: dict.rs  get_set.rs  mod.rs  selector.rs
tears/src/lazy/expr_core/: data.rs  expr.rs  expr_element.rs  expr_inner.rs  mod.rs
tears/src/lazy/expr_core/impls/: auto_impl.rs  export.rs  impl_cast.rs  impl_dtype_judge.rs  impl_groupby_time.rs  impl_io.rs  impl_mut.rs  impl_ops.rs  impl_own.rs  impl_view.rs  impl_window.rs  mod.rs  utils.rs
tears/src/lazy/impls/: auto_impl_own.rs  impl_cmp.rs  impl_mut.rs  impl_ops.rs  impl_own.rs  impl_view.rs  impl_window.rs  mod.rs
tears/src/utils/: default_new.rs  mod.rs
tears/src/window/: compare.rs  corr.rs  feature.rs  norm.rs  reg.rs
(+77 files in other folders)
