[workspace]

members = [
    "tears",
    "py_teapy"
]

[workspace.package]
version = "0.5.1"
authors = ["Teamon"]
edition = "2021"
repository = "https://github.com/Teamon9161/teapy"
license = "MIT"

[package]
name = "teapy"
version = "0.5.1"
authors = ["Teamon"]
edition = "2021"
repository = "https://github.com/Teamon9161/teapy"
license = "MIT"

[lib]
name = "teapy"
crate-type = ["cdylib", "rlib"]

[features]
default = ["lazy", "create", "groupby", "concat", "arr_func", "window_func", "time", "blas", "ops", "arw", "option_dtype", "agg"]

# default = ["lazy", "agg", "arr_func"]
time = ["py_teapy/time"]
option_dtype = ["py_teapy/option_dtype"]
lazy = ["py_teapy/lazy"]
srd = ["py_teapy/srd"]
window_func = ["py_teapy/window_func"]
agg = ["py_teapy/agg"]
arr_func = ["py_teapy/arr_func"]

ops = ["py_teapy/ops"]
groupby = ["py_teapy/groupby"]
create = ["py_teapy/create"]
concat = ["py_teapy/concat"]
blas = ["py_teapy/blas"]
arw = ["py_teapy/arw"]
npy = ["py_teapy/npy"]
stat = ["py_teapy/stat"]


# [profile.release]
# lto = true

[workspace.dependencies]
num = "0.4"
libc = "0.2"
rayon = "1.5"
ahash = { version = "0.8", features = ["std", "runtime-rng"]}
once_cell = "1.18"
regex = "1"
serde = { version = "1.0", features = ["derive", "rc"] }
# serde_with = {version = "3.0", features = ["chrono"]}
ndarray = {features=['rayon', 'serde'], version="0.15"}
numpy = "0.20.0"
pyo3 = {version = "0.20.0", features = ["extension-module", "abi3-py38", "macros", "serde"]}
parking_lot = "0.12"
chrono = {version = "0.4.31", features = ["serde"]}


[dependencies]
py_teapy = {path = "./py_teapy", default-features = false}

[profile.dev]
incremental = true