[workspace]
resolver = "2"
members = [
    # "test-core",
    "tea-core",
    "tea-dtype",
    "tea-error",
    "tea-ext",
    "tea-groupby",
    "tea-hash",
    "tea-io",
    "tea-lazy",
    "tea-macros",
    "tea-py",
    "tea-time",
    "tea-utils",
]

[workspace.package]
version = "0.6.9"
authors = ["Teamon"]
edition = "2021"
repository = "https://github.com/Teamon9161/teapy"
license = "MIT"

[profile.release]
lto = true

[workspace.dependencies]
num = "0.4"
libc = "0.2"
rayon = "1.5"
paste = "1.0"
ahash = { version = "0.8", features = ["std", "runtime-rng"]}
once_cell = "1.18"
regex = "1"
serde = { version = "1.0", features = ["derive", "rc"] }
# serde_with = {version = "3.0", features = ["chrono"]}
ndarray = {features=['rayon', 'serde'], version="0.15"}
numpy = "0.20.0"
pyo3 = {version = "0.20.0", features = ["extension-module", "abi3-py38", "macros", "serde"]}
parking_lot = "0.12"
chrono = {version = "0.4.31", features = ["serde"]}
arrow = {package = "arrow2", version = "0.18.0", default-features = false, features = ["io_ipc", "io_ipc_compression"]}

[profile.dev]
incremental = true