[workspace]
resolver = "2"
members = [
    "tea-core",
    "tea-ext",
    "tea-groupby",
    "tea-hash",
    "tea-io",
    "tea-lazy",
    "tea-macros",
    "tea-py",
]

[workspace.package]
version = "0.8.2"
authors = ["Teamon"]
edition = "2021"
repository = "https://github.com/Teamon9161/teapy"
license = "MIT"

[profile.release]
lto = true

[workspace.dependencies]
num = "0.4"
libc = "0.2"
rayon = "1.5"
paste = "1.0"
derive_more = { version = "1", features = ["from", "deref", "display"] }
ahash = { version = "0.8.11", features = ["std", "runtime-rng"] }
once_cell = "1.18"
regex = "1"
serde = { version = "1.0", features = ["derive", "rc"] }
ndarray = { features = ['rayon', 'serde'], version = "0.16" }
tevec = { version = "0.3", features = ["ndarray"], default-features = false }
pyo3 = { version = "0.21", features = [
    "extension-module",
    "abi3-py38",
    "macros",
    "chrono",
    "gil-refs",
] }
parking_lot = "0.12"
chrono = { version = "0.4.37", features = ["serde"] }
arrow = { package = "arrow2", version = "0.18.0", default-features = false, features = [
    "io_ipc",
    "io_ipc_compression",
] }

numpy = { git = "https://github.com/Teamon9161/rust-numpy", branch = "main" }

[profile.dev]
incremental = true
