[package]
name = "py_teapy"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Fash DataDict Library in Python"


[features]
# default = ["lazy", "time", "window_func", "blas", "arw"]
default = ["lazy", "create", "groupby", "concat", "arr_func", "window_func", "time", "blas", "arw", "option_dtype"]
# default = []
option_dtype = ["tears/option_dtype"]
create = ["tears/create"]
groupby = ["tears/groupby"]
concat = ["tears/concat"]
arr_func = ["tears/arr_func"]
agg = ["tears/agg"]

srd = ["tears/srd"]
ops = ["tears/ops"]
lazy = ["tears/lazy"]
time = ["tears/time"]
window_func = ["tears/window_func"]
blas = ["tears/blas", "lazy", "stat"]
npy = ["tears/npy"]
stat = ["tears/stat"]
arw = ["tears/arw"]

[dependencies]
tears = { path = "../tears", default-features = false, optional = true}
# bincode = "1.3"
pyo3 = { workspace=true }
numpy = { workspace=true }
parking_lot = { workspace=true }
ahash = { workspace=true }
rayon = { workspace=true }
regex = { workspace=true }
once_cell = { workspace=true }
ndarray = { workspace=true }
chrono = { workspace=true }
