[package]
name = "tea-dtype"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["time"]
# option_dtype = []
srd = ["serde"]
time = ["tevec/time", "pyo3/chrono"]

[dependencies]
tevec = { workspace = true, default-features = false}
# tea-time = {path = "../tea-time", optional = true}
tea-utils = {path = "../tea-utils"}
num = { workspace = true }
numpy = { workspace = true }
ndarray = { workspace = true }
pyo3 = { workspace = true }
serde = { workspace = true, optional = true }
