[package]
name = "tea-groupby"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["extend"]
extend = ["lazy", "lazy_time", "lazy_option_dtype"]

lazy_option_dtype = ["option_dtype", "tea-lazy/option_dtype"]
lazy = ["tea-lazy"]
lazy_time = ["lazy", "time", "tea-lazy/time"]

time = ["tea-core/time", "tea-hash/time"]
option_dtype = ["tea-core/option_dtype"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module", "abi3-py38", "macros", "serde"]}
tea-core = { path = "../tea-core", default-features=false, features=["method_1d", "concat", "extend"] }
tea-lazy = { path = "../tea-lazy", optional=true, default-features = false}
tea-macros = { path = "../tea-macros" }
tea-hash = { path = "../tea-hash" }
tea-ext = { path = "../tea-ext", default-features = false, features = ["agg", "map"]}
# once_cell = { workspace = true }
rayon = { workspace = true }
ndarray = { workspace = true, features=['rayon', 'serde'] }