[package]
name = "tea-hash"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["time", "ahasher"]
time = ["tea-dtype/time"]

ahasher = ["ahash"]
gxhasher = ["gxhash"]  # not implemented yet

[dependencies]
tea-dtype = {path = "../tea-dtype"}
ahash = {workspace = true, optional = true}
# once_cell = {workspace = true}
gxhash = {version = "2.2", optional = true}
