[package]
name = "tea-lazy"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# default = ["hash", "extend", "ops", "blas"]
default = ["extend", "ops"]
# default = []


extend = ["hash", "time"]

hash = []
arw = []  # todo! impl read_ipc in tea-io
# option_dtype = ["teapy-core/option_dtype"]
ops = ["teapy-core/ops"]
time = ["teapy-core/time"]
blas = ["teapy-core/blas", "teapy-core/method_1d"]


[dependencies]
derive_more = { workspace = true, features = ["from"] }
teapy-core = { path = "../teapy-core" }
tea-hash = { path = "../tea-hash" }
pyo3 = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
parking_lot = { workspace = true }
ndarray = { workspace = true }
