[package]
name = "tea-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[features]
default = []
# lazy = []

[dependencies]
syn = { version = "2", features=["full"] }
quote = { version = "1" }
proc-macro2 = { version = "1", default-features = false }
ndarray = { workspace=true }