[package]
name = "tea-py"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Fast DataDict Library in Python"


[features]
default = ["extend", "methods_extend", "groupby_extend", "lazy_io", "blas"]
# default = ["extend", "blas", "agg", "map"]

# methods includes extend datatype
methods_extend = ["extend", "methods", "tea-ext/extend"]
# groupby methods includes extend datatype
groupby_extend = ["extend", "groupby", "tea-groupby/extend"]

blas = ["tea-core/blas", "tea-lazy/blas", "tea-ext/map", "stat", "lazy"] # linalg


extend = ["ops", "lazy_time", "lazy_option_dtype"]
methods = ["agg", "map", "rolling", "concat", "create"]  # extend methods


# lazy
lazy_io = ["io", "lazy", "tea-io/lazy"]
lazy_groupby = ["groupby", "lazy", "tea-groupby/lazy"]
lazy_time = ["time", "lazy", "tea-lazy/time"]
lazy_option_dtype = ["option_dtype", "lazy", "tea-lazy/option_dtype"]

# dtypes extension
lazy = ["tea-lazy", "tea-ext/lazy"]
ops = ["tea-lazy/ops"]
time = ["tea-core/time", "tea-ext/time", "tea-hash/time"]
option_dtype = ["tea-core/option_dtype"]

# methods
create = ["tea-ext/create"]
concat = ["tea-core/concat", "tea-ext/concat"]
map = ["tea-ext/map"]
agg = ["tea-ext/agg"]
rolling = ["tea-ext/rolling"]

groupby = ["tea-groupby", "agg"]

stat = ["tea-ext/stat"]

# io
io = ["arw"]
npy = []
arw = ["tea-io/arw"]


srd = ["tea-core/srd"]


[dependencies]
tea-core = {path = "../tea-core", default-features = false}
tea-hash = {path = "../tea-hash"}
tea-lazy = {path = "../tea-lazy", optional = true}
tea-ext = {path = "../tea-ext", default-features = false}
tea-groupby = {path = "../tea-groupby", optional = true}
tea-io = {path = "../tea-io", default-features = false, optional = true}
pyo3 = { workspace=true }
numpy = { workspace=true }
parking_lot = { workspace=true }
ahash = { workspace=true }
rayon = { workspace=true }
regex = { workspace=true }
once_cell = { workspace=true }
ndarray = { workspace=true }
chrono = { workspace=true }
