[package]
name = "tea-py"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Fast DataDict Library in Python"


[features]
default = ["lazy", "ops", "map", "blas", "methods", "time", "io", "groupby"]
# default = ["lazy"]

blas = [
    "teapy-core/blas",
    "tea-lazy/blas",
    "tea-ext/map",
    "stat",
    "lazy",
] # linalg

methods = ["agg", "map", "rolling", "concat", "create"] # extend methods

# dtypes extension
lazy = []
ops = ["tea-lazy/ops"]
time = ["teapy-core/time", "tea-ext/time", "tea-hash/time", "tea-lazy/time"]

# methods
create = ["tea-ext/create"]
concat = ["teapy-core/concat", "tea-ext/concat"]
map = ["tea-ext/map"]
agg = ["tea-ext/agg"]
rolling = ["tea-ext/rolling"]

groupby = ["tea-groupby", "agg"]

stat = ["tea-ext/stat"]

# io
io = ["arw"]
npy = []
arw = ["tea-io/arw"]

srd = ["teapy-core/srd"]

[dependencies]
teapy-core = { path = "../teapy-core", default-features = false, features = [
    "method_1d",
] }
tea-hash = { path = "../tea-hash" }
tea-lazy = { path = "../tea-lazy" }
tea-ext = { path = "../tea-ext", default-features = false, features = ["lazy"] }
tea-groupby = { path = "../tea-groupby", features = ["lazy"], optional = true }
tea-io = { path = "../tea-io", default-features = false, features = [
    "lazy",
], optional = true }
pyo3 = { workspace = true, features = [
    "extension-module",
    "abi3-py310",
    "macros",
    "chrono",
] }
numpy = { workspace = true }
parking_lot = { workspace = true }
ahash = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
ndarray = { workspace = true }
chrono = { workspace = true }
