[project]
name = "teapy"
dependencies = ["numpy>=1.16.0"]
authors = [{ name = "Teamon", email = "teamon9161@163.com" }]
description = "A blazingly fast datadict library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "License :: OSI Approved :: MIT License",
  # "Operating System :: OS Independent",
]

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
  "pip>=23.3.1",
  "ruff>=0.3.5",
  "pytest>=7.4.3",
  "pytest-cov>=4.1.0",
  "pytest-xdist>=3.4.0",
  "hypothesis>=6.89.0",
  "statsmodels>=0.14.0",
  "maturin>=1.3.2",
  "pandas>=2.0.3",
  "spyder-kernels>=2.5.0",
  "polars>=0.20.16",
  # "black>=23.11.0",
  # "isort>=5.12.0",
  # "flake8>=5.0.4",
]


[tool.maturin]
python-source = "python"
module-name = "teapy.tears"

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "W",  # pycodestyle
  "F",  # Pyflakes
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  #   "D", # flake8-docstrings
  "D213",   # Augment NumPy docstring convention: Multi-line docstring summary should start at the second line
  "D417",   # Augment NumPy docstring convention: Missing argument descriptions
  "I",      # isort
  "SIM",    # flake8-simplify
  "TCH",    # flake8-type-checking
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "PT",     # flake8-pytest-style
  "RUF",    # Ruff-specific rules
  "PTH",    # flake8-use-pathlib
  "FA",     # flake8-future-annotations
  "PIE",    # flake8-pie
  "TD",     # flake8-todos
  "TRY",    # tryceratops
  "EM",     # flake8-errmsg
  "FBT001", # flake8-boolean-trap
]

ignore = [
  "F401",   # imported but unused
  "F403",   # unable to detect undefined names
  "EM101",  # Exception must not use a string literal, assign to variable first
  "TRY003", # Avoid specifying long messages outside the exception class
  "E501",   # line too long
]
